# sweetwatch

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
garmin/sweetwatch-widget/: manifest.xml
garmin/sweetwatch-widget/source/: SweetWatchApp.mc  SweetWatchView.mc
src/sweetwatch/: __init__.py  config.py
src/sweetwatch/agent/: analyzer.py
src/sweetwatch/api/: main.py  schemas.py
src/sweetwatch/api/routers/: glucose.py
src/sweetwatch/db/: engine.py
src/sweetwatch/libre/: client.py
src/sweetwatch/models/: glucose.py
src/sweetwatch/services/: __init__.py  glucose.py
src/sweetwatch/sources/: __init__.py  base.py  librelinkup.py  nightscout.py
src/sweetwatch/tasks/: sync.py
src/sweetwatch/templates/: dashboard.html
tests/: test_health.py
